[package]
name = "oink"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "0.12.1"
handlebars = "4.1.6"
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = { version = "1.0.73", features = ["preserve_order"] }
serde-value = "0.7.0"
regex = "1.5.4"
cached = "0.26.2"
chrono = "0.4.19"
dotenv = "0.15.0"
indexmap = { version = "1.7.0", features = ["serde"] }